# Scotty-web-app

./: README.md  web-first-app.cabal
app/: Main.hs
