name:                web-first-app
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/web-first-app#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                      , time
                      , scotty
  default-language:    Haskell2010

executable web-first-app-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , web-first-app
                     , scotty
                     , aeson
                     , containers
                     , wreq
                     , lens
                     , string-conv
                     , lucid
                     , themoviedb
                     , text
                     , time-locale-compat
                     , time
  default-language:    Haskell2010

test-suite web-first-app-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , web-first-app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/web-first-app
